# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.330 2005/09/12 17:17:21 wolf31o2 Exp $

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Changing default CHOST for x86 from i386-pc-linux to i686-pc-linux. For
  discussion, see bug #88777.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, +arch/sh.py,
  modules/generic_stage_target.py:
  Added sh architecture to supported architectures. Thanks to Matsuu Takuto
  <matsuu@gentoo.org> for the patch. Closing bug #105693.

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Add code to dump grppkgs.txt file on livecd-stage1 and kernelpkgs.txt file
  on livecd-stage2 and removing universal motd for livecd/type of
  gentoo-release-livecd.

  08 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py:
  Add optional livecd/type env var for scripts to add optional items to the
  scripts

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/files/x86-help.msg:
  Removing x86-help.msg as it is no longer used.

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/README.txt, livecd/files/x86-F3.msg, livecd/files/x86-F4.msg,
  livecd/files/x86-F5.msg, livecd/files/x86-F6.msg, livecd/files/x86-F7.msg:
  Add dobladecenter description to bootloader files for x86/amd64.

  06 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Changed pentium-mmx to use -march=pentium-mmx and closing bug #102366.

  01 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added split to use section for bug #104414.

  30 Aug 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/x86-F3.msg, livecd/files/x86-F4.msg, livecd/files/x86-F5.msg,
  livecd/files/x86-F6.msg, livecd/files/x86-F7.msg: