@@ -235,6 +235,20 @@ livecd/devmanager:
 # livecd/xinitrc:
 livecd/xinitrc:
 
+# This is used by catalyst to determine which display manager you wish to
+# become the default.  This is used on the official Gentoo LiveCD and is valid
+# for any livecd/type.
+# example:
+# livecd/xdm: gdm
+livecd/xdm:
+
+# This is used by catalyst to determine which X session should be started by
+# default by the display manager.  This is used on the official Gentoo LiveCD
+# and is valid for any livecd/type.
+# example:
+# livecd/xsession: gnome
+livecd/xsession:
+
 # This option is used to create non-root users on your CD.  It takes a space
 # separated list of user names.  These users will be added to the following
 # groups: users,wheel,audio,games,cdrom,usb
